# pireplay

src/: pyproject.toml
src/pireplay/: camera.py  config.yaml  consts.py  network.py  replays.py  web_server.py
src/pireplay/static/: base.css  style.css
src/pireplay/templates/: base.html  index.html  replay.html  settings.html
src/pireplay/templates/components/: nav.html
